--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "gorgeous-ui",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "description": "A Component Library for Vue.js.",
+  "main": "lib/gorgeous-ui.common.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lib": "vue-cli-service build --target lib --name gorgeous-ui --dest lib src/index.js"
   },
   "dependencies": {
+    "async-validator": "^1.10.0",
+    "deepmerge": "^2.2.1",
+    "normalize-wheel": "^1.0.1",
+    "throttle-debounce": "^2.0.1"
+  },
+  "peerDependencies": {
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -18,7 +27,14 @@
     "@vue/cli-service": "^3.0.5",
     "@vue/eslint-config-standard": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
