--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
+  },
+  "engines": {
+    "node": ">= 10.12.0",
+    "npm": ">= 6.4.1"
   }
 }
