增加新组件,修复一些bug
- 增加
  - input组件
  - form组件
  - checkbox组件
- 修复
  - new-component.js内bug
- 增加
  - mixins 混入broacast 和 dispatch
  - utils 寻找组件实例的多个方法

--- a/components.json
+++ b/components.json
@@ -2,5 +2,12 @@
   "button": "./src/components/button/index.js",
   "button-group": "./src/components/button-group/index.js",
   "col": "./src/components/col/index.js",
-  "row": "./src/components/row/index.js"
+  "row": "./src/components/row/index.js",
+  "tooltip": "./src/components/tooltip/index.js",
+  "input": "./src/components/input/index.js",
+  "form": "./src/components/form/index.js",
+  "form-item": "./src/components/form-item/index.js",
+  "tree": "./src/components/tree/index.js",
+  "checkbox": "./src/components/checkbox/index.js",
+  "checkbox-group": "./src/components/checkbox-group/index.js"
 }
